--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @layer components {
   .sidebar-icon {
     @apply relative flex items-center justify-center h-12 w-12 mt-2 mb-2 mx-auto
-           bg-gray-800 text-purple-400
+           bg-[#121212] text-purple-400
            hover:bg-purple-500 hover:text-white
            rounded-3xl hover:rounded-xl
            hover:cursor-pointer
