--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,11 @@
   .sidebar-icon {
     @apply relative flex items-center justify-center h-12 w-12 mt-2 mb-2 mx-auto
            bg-[#121212] text-purple-400
-           hover:bg-purple-500 hover:text-white
+           fill-purple-400
+           hover:bg-purple-500 hover:text-white hover:fill-white
            rounded-3xl hover:rounded-xl
            hover:cursor-pointer
-           transition-all duration-300 ease-in-out;
+           transition-[border-radius] duration-300 ease-in-out;
   }
   .sidebar-tooltip {
     @apply absolute w-auto p-2 m-2 min-w-max left-14
